
Important changes in 2.11 (2022-05-XX):

* Feature: Issue #86: Smart transcode now detects if a source file is audio only
  and uses the correct target format. For example, with --destination=webm+mp3, if
  one MP4 input file contains a video stream, another an audio stream only, the
  resulting files will be webm (for the video input) and mp3 for the audio only
  file.
* Bugfix: Smart encode selected the video format for cue sheet tracks, regardless
  of the input format. This has been fixed now.
* Bugfix: Fix crash when DVD/Bluray should be transcoded to audio only.
* Bugfix: If track performer is empty, try album performer instead.
* Bugfix: Failing to mount Fuse during "make check" went unnoticed as the result
  code (which was supposed to be 99) was actually 0. Now nonzero is returned.
* Bugfix: The Docker build command contained a "make check" which actually failed
  altogether. Step has been removed, "make check" mounts Fuse but this requires
  privileges that do not exist during "docker build".
* Bugfix: mremap() returns MAP_FAILED on error, not NULL. Fixed check for wrong
  error condition, could cause the application to crash or return stupid error
  messages.

Important changes in 2.10 (2022-04-26):

* Feature: Issue #123: New command line option to hide files by extension. Example:
  --hide_extensions=jpg,png,cue would stop covers and cue sheets from showing up.
* Feature: Issue #120: Added subtitle support. Subtitle streams can now also be
  transcoded to the output files. Separate SRT or VTT files will be incorporated
  as subtitle streams.
* Bugfix: Fixed memory leak in encode_audio_frame().
* Bugfix: Issue #122: Last song was missing from cuesheet files.
* Bugfix: Issue #129: Files remained zero size when previously transcoded.
* Bugfix: Issue #130: Fix file sizes can be incorrectly reported by ls but are
  correct when data is read.
* Bugfix: Duration was not saved in cache SQLite database.