@@ -20,6 +20,7 @@ News
 ### Version 2.11 under development
 
 * **Feature:** [Issue #86](https://github.com/nschlia/ffmpegfs/issues/86): Smart transcode now detects if a source file is audio only and uses the correct target format. For example, with --destination=webm+mp3, if one MP4 input file contains a video stream, another an audio stream only, the resulting files will be webm (for the video input) and mp3 for the audio only file.
+* **Feature:** [Issue #137](https://github.com/nschlia/ffmpegfs/issues/137): Added --no_subtitles option to turn subtitles off.
 * **Bugfix:** Smart encode selected the video format for cue sheet tracks, regardless of the input format. This has been fixed now.
 * **Bugfix:** Fix crash when DVD/Bluray should be transcoded to audio only.
 * **Bugfix:** If track performer is empty, try album performer instead.
